# like-shell

./: Cargo.toml  setup-hooks.sh
.githooks/: pre-commit
src/: lib.rs
