[package]
name = "like-shell"
version = "0.3.2"
description = "Shell-like utilities for Rust. Useful for E2E tests."
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
fs_extra = "1.3.0"
libc = "0.2.155"
nix = { version = "0.29.0", features = ["process"] }
tempdir = "0.3.7"
tokio = { version = "1.38.0", features = ["process", "sync", "rt", "io-util"] }
